# cloudwarden-v3

./: .gitignore  Dockerfile  README.md  cloudwarden_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloudwarden/: __init__.py  config.py
cloudwarden.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cloudwarden/agent/: explainer.py
scripts/: run.py
venv-prod/: pyvenv.cfg
venv-prod/Scripts/: activate  activate.bat  jp.py  jsondiff  jsonpatch  jsonpointer
